[gd_scene load_steps=8 format=3 uid="uid://071a554dibua"]

[ext_resource type="Script" uid="uid://lgbcgm62nq5d" path="res://Scripts/base_enemy.gd" id="1_kjpuc"]
[ext_resource type="Texture2D" uid="uid://40mdn4kybocx" path="res://Assets/enemies/tile_0018.png" id="3_trv5a"]
[ext_resource type="Texture2D" uid="uid://b3dv7uookd53c" path="res://Assets/enemies/tile_0019.png" id="4_jfnjk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2m80"]
size = Vector2(125, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjpuc"]
size = Vector2(6, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p0xe"]
size = Vector2(41.45, 40.45)

[sub_resource type="SpriteFrames" id="SpriteFrames_d1l02"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_trv5a")
}, {
"duration": 1.0,
"texture": ExtResource("4_jfnjk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_kjpuc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(0.32, 0.32)
shape = SubResource("RectangleShape2D_t2m80")

[node name="ChangeDirection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeDirection"]
position = Vector2(18, -0.5)
shape = SubResource("RectangleShape2D_kjpuc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChangeDirection"]
position = Vector2(-18, 0)
shape = SubResource("RectangleShape2D_kjpuc")

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(-0.275, 0.225)
shape = SubResource("RectangleShape2D_7p0xe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -13)
scale = Vector2(2.70833, 2.79167)
sprite_frames = SubResource("SpriteFrames_d1l02")
autoplay = "default"
frame = 1
frame_progress = 0.375508

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="ChangeDirection" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Detect" to="." method="_on_detect_area_entered"]
[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
